# sudoku-edge-pipeline

./: .gitignore  LICENSE  README.md
data/puzzles/: bottom_heavy.txt  easy_01.txt  easy_02.txt  easy_03.txt  expert_01.txt  expert_02.txt  expert_03.txt  hard_01.txt  hard_02.txt  hard_03.txt  medium_01.txt  medium_02.txt  medium_03.txt  minimal_17_clues.txt  nearly_full.txt  newspaper_01.txt  sparse_02.txt  symmetric_01.txt
docs/: architecture.md  benchmarks.md
solver-cpp/: CMakeLists.txt
solver-cpp/bench/: bench_backtracking.cpp
solver-cpp/include/sudoku/: backtracking_solver.hpp  board.hpp  solver.hpp
solver-cpp/src/: backtracking_solver.cpp  board.cpp
solver-cpp/tests/: test_backtracking_solver.cpp  test_board.cpp
